--- a/commoditybuy.html
+++ b/commoditybuy.html
@@ -2,11 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>Title</title>
     <link rel="stylesheet" href="./style.css">
     <script src="js/jquery-1.8.3.js"></script>
 </head>
 <body>
+<script>
+    (function (doc, win) {
+        var docEl = doc.documentElement,
+            resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+            recalc = function () {
+                var clientWidth = docEl.clientWidth;
+                if (!clientWidth) return;
+                if(clientWidth>=750){
+                    docEl.style.fontSize = '100px';
+                }else{
+                    docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
+                }
+            };
+
+        if (!doc.addEventListener) return;
+        win.addEventListener(resizeEvt, recalc, false);
+        doc.addEventListener('DOMContentLoaded', recalc, false);
+    })(document, window);
+</script>
+<!--移动-->
+<div class="m-header">
+    <div class="m-header-content">
+        <div><a href="javascript:history.go(-1);"><img src="./img/88_03.png" alt=""></a></div>
+        <div>易师考</div>
+        <div></div>
+    </div>
+</div>
 <div class="header">
     <div class="header-content">
         <a class="header-logo">
@@ -64,6 +92,37 @@
             </div>
             <p id="yyd"><i class="yyd-i1"><img src="./img/xdg01.png" alt=""></i><i class="yyd-i2"><img src="./img/xdg02.png" alt=""></i> 我已查看并同意<a href="#">《易师考用户使用服务协议》</a></p>
         </div>
+    </div>
+</div>
+<div class="m-commodity">
+    <div class="m-commodity-top">
+        <div class="m-commodity-img">
+            <img src="./img/kcimg.png" alt="">
+        </div>
+        <div class="m-commodity-title">
+            <p class="m-commodity-tp">18下资格幼儿园试听课</p>
+            <p class="m-commodity-tm">2018.06.13至2018.06.13</p>
+            <p class="m-commodity-tg">￥9.9</p>
+        </div>
+        <a href="" class="m-commodity-yhj">
+            <span>优惠券<i>0张可用</i></span>
+            <span>暂无优惠券可用</span>
+        </a>
+    </div>
+    <div class="m-commodity-pay">
+        <p>支付方式</p>
+        <div class="m-commodity-payan">
+            <a href="">
+                <img src="./img/zfb.png" alt="">
+            </a>
+            <a href="">
+                <img src="./img/wxzf.png" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="m-commodity-confirm">
+        合计：<span>99.00</span>
+        <a href="">确认</a>
     </div>
 </div>
 <div class="Bottom">
