--- a/commoditybuy.html
+++ b/commoditybuy.html
@@ -66,7 +66,7 @@
             <h2>2018上教师资格一站拿证 （单科）</h2>
             <p class="Course-time">课程时间：2018年3月14日（100课时） 有效期365天
                 <i><img src="./img/sm.png" alt=""></i>
-                <span>自购买之日起课观看课程旗帜</span>
+                <q>自购买之日起课观看课程旗帜</q>
             </p>
             <p>授课教师<span>余老师</span><span>杨老师</span></p>
             <p>解读公告 高效备考</p>
