--- a/commoditygoods.html
+++ b/commoditygoods.html
@@ -47,8 +47,8 @@
         </div>
     </div>
     <div class="commodity-content clearfix">
-        <h3>请选择优惠券 <span><b>+</b>添加收货地址</span></h3>
-        <div class="newaddress">
+        <h3>请选择优惠券 <span class="commodity-add"><b>+</b>添加收货地址</span></h3>
+        <div class="newaddress" style="display: none;">
             <form>
                 <span>收件人:</span> <input type="text" name="Addressee" />
                 <span>手机号:</span> <input type="text" name="phone" /><br>
@@ -63,7 +63,9 @@
             </div>
         </div>
         <div class="address-list active">
-            <img src="./img/confirm.png" alt="">
+            <div class="address-dg">
+                <img src="./img/cdh.png" alt="">
+            </div>
             <div class="address-list-text">
                 <span>收件人：赵航</span>
                 <span>手机号：12345245677</span><br>
@@ -72,7 +74,9 @@
             <a href="">删除</a>
         </div>
         <div class="address-list">
-            <img src="./img/confirm.png" alt="">
+            <div class="address-dg">
+                <img src="./img/cdh.png" alt="">
+            </div>
             <div class="address-list-text">
                 <span>收件人：赵航</span>
                 <span>手机号：12345245677</span><br>
