--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
     </div>
     <div class="Bottom">
         <div class="service">
-            <div class="about"><p class="service-title">关于我们</p><a href="#">了解易师考</a><a href="#">加入易师考</a></div>
+            <div class="about"><p class="service-title">关于我们</p><a href="#">了解易师考</a><a href="#">加入易师考</a><a href="#">用户协议</a></div>
             <div class="contact"><p class="service-title">联系方式</p><a>客服热线：4001234567（周一至周五9:00-18:00）</a><a>客服邮箱：kefu@eshikao.com</a><a
                     href="#" class="consult">在线咨询</a></div>
             <div class="follow"><p class="service-title">关注我们</p>
